--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ ul li {
         <header>
             <h1>Radha Jha</h1>
 			<img src="cv pic944.png">
-	<image src="C:\Users\Students\Pictures\Screenshots\cv pic944.png"> </image>
+	<image src="cv pic944.png"> </image>
             <p>undergradute</p>
             <p>Email:rj7879@example.com | Phone:980----98989</p>
         </header>
